2004-11-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/consumers/httpstreamer/resources.py:
	  fix a STUPID bug where the requester was stored as a tuple because
	  of a trailing comma and of course %s alone doesn't show this as
	  a tuple.  sigh.
	* flumotion/common/errors.py:
	* flumotion/component/bouncers/bouncer.py:
	* flumotion/component/consumers/httpstreamer/http.py:
	* flumotion/manager/component.py:
	  add some more functions so keycards can be expired by the bouncer

2004-11-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	* flumotion/component/bouncers/bouncer.py:
	* flumotion/component/bouncers/htpasswdcrypt.py:
	* flumotion/component/encoders/jpeg.py:
	* flumotion/component/encoders/mulaw.py:
	  add more components to pychecker checking and fix warnings

2004-11-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/common.py:
	  make pkgAddPath only add stuff to __path__ if not already there

2004-11-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/bouncers/bouncer.py:
	* flumotion/component/bouncers/htpasswdcrypt.py:
	  unprivatize Bouncer.addKeycard()

2004-11-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	* configure.ac:
	* pkgconfig/Makefile.am:
	* pkgconfig/flumotion-uninstalled.pc.in:
	* pkgconfig/flumotion.pc.in:
	  adding .pc files

2004-11-04  Johan Dahlin  <johan@gnome.org>

	* data/glade/wizard_soundcard.glade:
	* flumotion/admin/admin.py:
	* flumotion/admin/gtk/client.py:
	* flumotion/component/feedcomponent.py:
	* flumotion/component/producers/soundcard/soundcard.py:
	* flumotion/component/producers/soundcard/soundcard.xml:
	* flumotion/test/test_wizard.py:
	* flumotion/wizard/enums.py:
	* flumotion/wizard/save.py:
	* flumotion/wizard/steps.py:
	* flumotion/wizard/wizard.py:

	Add OSS/Alsa and probing to soundcard, fixes issue #61
	